# almighty-pr-review-server

./: .gitignore  README.md  pyproject.toml
docs/: api-pagination.md  context-provider-contract.md  review-pipeline-rollout.md  vendor-cli-contract.md
scripts/: check.sh  dev.sh  review-benchmark-collect.py  review-benchmark-lint.py  review-benchmark-run.py  review-benchmark-score.py  review-cli-telemetry-preflight.py  review-pipeline-benchmark.py  review-read-containment-preflight.py  review_benchmark_common.py  sandbox-e2e.py
server/: api.py  config.py  db.py  formatter.py  health.py  http_security.py  main.py  models.py  notify.py  pagination.py  pipeline.py  poller.py  repo_readiness.py  retention.py  seams.py  wiki.py  worker.py
tests/: conftest.py  test_api.py  test_canary_metrics.py  test_config.py  test_context.py  test_db.py  test_diff_filter.py  test_e2e_diagnostics.py  test_e2e_posting_policy.py  test_e2e_smoke.py  test_feedback_slack.py  test_findings_schema.py  test_formatter.py  test_gh.py  test_gh_deps.py  test_harness.py  test_harness_api.py  test_health.py  test_health_deep.py  test_jira.py  test_job_repo.py  test_lifespan.py  test_live_mssql_source.py  test_merge.py  test_notify.py  test_operations_dashboard.py  test_overview.py  test_pagination.py  test_pipeline.py  test_poller.py  test_post.py  test_post_slack.py  test_prescreen.py  test_process_lease.py  test_repo_readiness.py  test_repos.py  test_retention.py  test_review_benchmark.py  test_review_rules.py  test_review_snapshot.py  (+15 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+129 files in other folders)
